--- a/src/components/Drink.css
+++ b/src/components/Drink.css
@@ -7,7 +7,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    background-color: rgb(240, 236, 236);
+    /* background-color: rgb(240, 236, 236); */
 }
 .item{
     background-color: white;
