--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   margin: 0;
 }
 .app{
-  background-color: rgb(240, 236, 236);
+  /* background-color: rgb(240, 236, 236); */
+  background-color: #f5f5f5;
 }
 /* .body{
   width: 1100px;
