--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -2,4 +2,89 @@
     width: 1100px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 40px;
+}
+.headings{
+    display: flex;
+}
+.items, .quantity, .price, .subtotal{
+    margin-right: 20px;
+    align-items: center;
+}
+.itemz{
+    display: flex;
+    align-items: center;
+    height: 100px;
+    flex: 0.4;
+}
+.image{
+    width: 200px;
+}
+.image>img{
+    width: 100%;
+}
+.items{
+    flex: 0.35;
+}
+.quantity{
+    flex: 0.17;
+}
+.price{
+    flex: 0.2;
+}
+.subtotal{
+    flex: 0.15;
+}
+.itemyenyewe{
+    display: flex;
+    background-color: white;
+    margin-top: 20px;
+    padding: 20px;
+    border: 1px solid rgb(224, 224, 224);
+    border-radius: 4px;
+}
+.div{
+    background-color: white;
+}
+
+.image1{
+    width: 100px;
+}
+.items1{
+    flex: 0.5;
+}
+.quantity1{
+    flex: 0.2;
+}
+.price1{
+    flex: 0.2;
+    margin-top: 25px;
+}
+.subtotal1{
+    flex: 0.2;
+    margin-top: 25px;
+}
+.grandtotal{
+    position: absolute;
+    left: 800px;
+    width: auto;
+    background-color: white;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    color: white;
+}
+.arrows{
+    cursor: pointer;
+}
+.proceed{
+    position:absolute;
+    margin-top: 100px;
+    left:600px;
+    background-color: white;
+    padding: 20px;
+}
+.back{
+    margin-right: 20px;
 }
