--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,6 +3,9 @@
     top: 0px;
     z-index: 2;
     border-bottom: 1px solid rgb(211, 209, 209);
+    /* width: 1100px;
+    margin-left: auto;
+    margin-right: auto; */
 }
 .innerheader{
     display: flex;
@@ -53,6 +56,19 @@ form{
 .user_name{
     margin-top: 15px !important;
     text-decoration: none !important;
+    margin-right: 10px;
+    color: black !important;
+    font-size: 20px;
+}
+.signout{
+    margin-top: 1px;
+    font-size: 20px;
+    text-decoration: none !important;
+}
+.login{
+    margin-top: 20px !important;
+    text-decoration: none !important;
+    margin-right: 30px;
     color: black !important;
     font-size: 20px;
 }
